5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1836_1276.log
== TEST (2019-06-25 11:09:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input("Horas de trabalho: ")))
a = shape(v)[1]
n = zeros(a, dtype = int)
for j in range(a):
	if(sum(v[:,j]) = max(v)):
		print(j)
-- ERROR:
File "XXXX", line 7
    if(sum(v[:,j]) = max(v)):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:10:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input("Horas de trabalho: ")))
a = shape(v)[1]
n = zeros(a, dtype = int)
for j in range(a):
	if(sum(v[:,j]) == max(v)):
		print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:11:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input("Horas de trabalho: ")))
a = shape(v)[1]
n = zeros(a, dtype = int)
for j in range(a):
	if(sum(v[:,j]) == max(v)):
		print(j.all())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:14:29) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input("Horas de trabalho: ")))
a = shape(v)[1]
n = zeros(a, dtype = int)
print(max(v))
#for j in range(a):
	#if(sum(v[:,j]) == max(v)):
		#print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:14:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input("Horas de trabalho: ")))
a = shape(v)[1]
n = zeros(a, dtype = int)
print(max(v.all()))
#for j in range(a):
	#if(sum(v[:,j]) == max(v)):
		#print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:16:08) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input("Horas de trabalho: ")))
a = shape(v)[1]
n = zeros(a, dtype = int)
print((v.max())
#for j in range(a):
	#if(sum(v[:,j]) == max(v)):
		#print(j)
#for j in range(n):
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:16:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input("Horas de trabalho: ")))
a = shape(v)[1]
n = zeros(a, dtype = int)
print((v.max()))
#for j in range(a):
	#if(sum(v[:,j]) == max(v)):
		#print(j)
#for j in range(n):
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:20:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input("Horas de trabalho: ")))
n = zeros(7, dtype = int)

for j in range(7):
	n[j] = sum([:,i])
print(n)

	
	
-- ERROR:
File "XXXX", line 7
    n[j] = sum([:,i])
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:20:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input("Horas de trabalho: ")))
n = zeros(7, dtype = int)

for j in range(7):
	n[j] = sum([:,j])
print(n)

	
	
-- ERROR:
File "XXXX", line 7
    n[j] = sum([:,j])
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:21:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input("Horas de trabalho: ")))
n = zeros(7, dtype = int)

for j in range(7):
	n[j] = sum(v[:,j])
print(n)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:23:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input("Horas de trabalho: ")))
n = zeros(7, dtype = int)

for j in range(7):
	n[j] = sum(v[:,j])
for i in range(n):
	if(n[i] == max(n))
		print(i+1)
	
-- ERROR:
File "XXXX", line 9
    if(n[i] == max(n))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:23:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input("Horas de trabalho: ")))
n = zeros(7, dtype = int)

for j in range(7):
	n[j] = sum(v[:,j])
for i in range(n):
	if(n[i] == max(n)):
		print(i+1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:23:39) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input("Horas de trabalho: ")))
n = zeros(7, dtype = int)

for j in range(7):
	n[j] = sum(v[:,j])
for i in range(size(n)):
	if(n[i] == max(n)):
		print(i+1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:23:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input("Horas de trabalho: ")))
n = zeros(7, dtype = int)

for j in range(7):
	n[j] = sum(v[:,j])
for i in range(size(n)):
	if(n[i] == max(n)):
		print(i+1)
	
-- EXECUTION TIME:
1.04864
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
